# optimization-experiments

./: .exec-helper_profiles  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Jamroot  LICENSE  README.md  SConstruct  exec  exec.py
00-benchmark/: CMakeLists.txt  benchmark.cpp
01-simd-addition/: CMakeLists.txt  simd-addition-normal.cpp
01-simd-and/: CMakeLists.txt
01-simd-and/include/: simd-and.h
01-simd-and/include/compiler-specific/gcc/: compilerSpecific.h
01-simd-and/src/: performance.cpp  unittest.cpp
catch/: Jamfile
common/: CMakeLists.txt  Jamfile  common.h
common/include/: performanceUtils.h  randomInput.h
common/include/amd64/: targetSpecific.h
common/include/i386/: targetSpecific.h
common/src/: performanceUtils.cpp
cppcheck/: includes.cppcheck
exec_utils/analyze/: analyze.py
exec_utils/buildSystem/: b2.py  buildSystem.py  cmake.py  scons.py
exec_utils/cmd/: cmd.py
exec_utils/filter/: filterchain.py  perf.py  valgrindMemcheck.py
exec_utils/options/: options.py
exec_utils/runner/: runner.py
exec_utils/staticAnalysis/: cppcheck.py
exec_utils/util/: util.py
exec_utils/vcsSystem/: git.py  vcsSystem.py
performance/: Jamfile
simd-and/: CMakeLists.txt  Jamfile
simd-and/include/: benchmark-simd-and.h  simd-and.h
simd-and/include/compiler-specific/clang/: compilerSpecific.h
simd-and/include/compiler-specific/gcc/: compilerSpecific.h
simd-and/src/: benchmark-simd-and-force-normal.cpp  benchmark-simd-and-normal.cpp  benchmark-simd-and-vector.cpp  unittest.cpp
site_scons/: buildTools.py  clang.py  gcc.py  my_utils.py  setupTools.py
src/: SConscript
src/benchmark/: CMakeLists.txt  SConscript  benchmark-macros.h
src/catch/: CMakeLists.txt  Jamfile  SConscript
src/common/: Jamfile  SConscript
src/common/include/: performanceUtils.h  randomInput.h  randomInputImplementation.h
src/common/include/i386/: targetSpecific.h
src/common/src/: performanceUtils.cpp
src/simd-and/: CMakeLists.txt  Jamfile  SConscript
src/simd-and/include/: benchmark-simd-and.h  compilerSpecific.h  simd-and.h
src/simd-and/include/compiler-specific/clang/: compilerSpecific.h
src/simd-and/include/compiler-specific/gcc/: compilerSpecific.h
src/simd-and/src/: benchmark-simd-and-force-normal.cpp  benchmark-simd-and-normal.cpp  benchmark-simd-and-vector.cpp  unittest.cpp
